Add Black-Scholes option pricing function with support for calls and puts

--- a/Black_Scholes_Options_Model.ipynb
+++ b/Black_Scholes_Options_Model.ipynb
@@ -2,26 +2,75 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "964cbd6d",
+   "execution_count": 7,
+   "id": "58ede5b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import yfinance as yf\n",
+    "import datetime as dt\n",
+    "import numpy as np\n",
+    "from scipy.stats import norm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6dd9796",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "fd822c84",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello world\n"
+      "44.74\n"
      ]
     }
    ],
    "source": [
-    "print(\"hello world\")"
+    "def black_scholes(S, K, T, r, sigma, option_type='call'):\n",
+    "    d1 = (np.log(S / K) + (r + 0.5 * sigma ** 2) * T) / (sigma * np.sqrt(T))\n",
+    "    d2 = d1 - sigma * np.sqrt(T)\n",
+    "\n",
+    "    if option_type == 'call':\n",
+    "        return S * norm.cdf(d1) - K * np.exp(-r * T) * norm.cdf(d2)\n",
+    "    elif option_type == 'put':\n",
+    "        return K * np.exp(-r * T) * norm.cdf(-d2) - S * norm.cdf(-d1)\n",
+    "    else:\n",
+    "        raise ValueError(\"option_type must be 'call' or 'put'\")\n",
+    "        \n",
+    "S = 100        \n",
+    "K = 150          # Strike\n",
+    "T = 365 / 365     # 30 days to expiry\n",
+    "r = 0.05         # Risk-free rate (5%)\n",
+    "sigma = 0.3\n",
+    "\n",
+    "option_type = 'put'\n",
+    "\n",
+    "price = black_scholes(S, K, T, r, sigma, option_type)\n",
+    "print(price.round(2))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf355f96",
+   "id": "607d1d3d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "668fc182",
    "metadata": {},
    "outputs": [],
    "source": []
